package ex41;

public class ExerciseConstants {
    static final String INPUT_FILENAME = "exercise41_input.txt";
    static final String OUTPUT_FILENAME = "exercise41_output.txt";
}
