@startuml
'https://plantuml.com/class-diagram

App *-- ListOperator
App o-- FileIO
App o-- ExerciseConstants

class App {
    +{static} void main(String[] args))
}

class FileIO {
    +{static} ArrayList<String> getRecords(String inputFilename)
    +{static} void writeOutput(String outputFilename, String output)
}

class ListOperator {
    -List<String> namesList
    +void sortList()
    +String getListReport()
}

class ExerciseConstants {
    +{static} String INPUT_FILENAME
    +{static} String OUTPUT_FILENAME
}

@enduml